# TarefaPraticaIoT

./: LICENSE  README.md
RosaDosVentos/: CMakeLists.txt  RosaDosVentos.c
Tarefa1/: CMakeLists.txt  TesteWifi.c
